--- a/views/admin.html
+++ b/views/admin.html
@@ -32,7 +32,8 @@
             <button class="btn btn-danger" id="delete">Delete</button>
             <button class="btn btn-secondary" id="back">Back</button>
         </div>
+        <div id="test"></div>
     </div>
-    <script type="text/javascript" src="./js/admin.js""></script>
+    <script type="text/javascript" src="/js/admin.js""></script>
 </body>
 </html>
