--- a/views/admin.html
+++ b/views/admin.html
@@ -12,27 +12,45 @@
 <body>
     <div class="container_fluid">
         <div class="container" id="form_div">
-            <form required class="form_inputs mb-3"> <!--method="post"-->
-                <h6>Question</h6>
-                <textarea class="mb-i2 input_question" rows="6" cols="40" name="question"></textarea>
+            <form required class="form_inputs mb-3" id="form">
+                <h4>Question</h4>
+                <textarea class="mb-i2 input_question input" rows="6" cols="40" name="question"></textarea>
                 <p>Answers</p>
                 <input class="radio_btn" type="radio" id="ans_one" name="radio">
-                <input class="answer" type="text" for="ans_one"></input><br>
+                <input class="answer input" type="text" for="ans_one"></input><br>
                 <input class="radio_btn" type="radio" id="ans_two" name="radio">
-                <input class="answer" type="text" for="ans_two"></input><br>
+                <input class="answer input" type="text" for="ans_two"></input><br>
                 <input class="radio_btn" type="radio" id="ans_three" name="radio">
-                <input class="answer" type="text" for="ans_three"></input><br>
+                <input class="answer input" type="text" for="ans_three"></input><br>
                 <input class="radio_btn" type="radio" id="ans_four" name="radio">
-                <input class="answer" type="text" for="ans_four"></input><br><br>
+                <input class="answer input" type="text" for="ans_four"></input><br><br>
             </form>
         </div>
         <div class="container" id="buttons_div">
             <button class="btn btn-success" id="add">Add</button>
-            <button class="btn btn-primary" id="save">Save Changes</button>
-            <button class="btn btn-danger" id="delete">Delete</button>
-            <button class="btn btn-secondary" id="back">Back</button>
         </div>
         <div id="test"></div>
+    </div>
+    <div class="container_fluid">
+        <div class="container" id="form_div_update">
+            <form required class="form_inputs mb-3" id="form_update">
+                <h4>Update Question</h4>
+                <textarea class="mb-i2 input_question_update input" id="question_update" rows="6" cols="40" name="update"></textarea>
+                <p>Update Answers</p>
+                <input class="radio_btn_update" type="radio" id="ans_0" name="radio">
+                <input class="answer_update input" type="text" for="ans_one"></input><br>
+                <input class="radio_btn_update" type="radio" id="ans_1" name="radio">
+                <input class="answer_update input" type="text" for="ans_two"></input><br>
+                <input class="radio_btn_update" type="radio" id="ans_2" name="radio">
+                <input class="answer_update input" type="text" for="ans_3"></input><br>
+                <input class="radio_btn_update" type="radio" id="ans_3" name="radio">
+                <input class="answer_update input" type="text" for="ans_four"></input><br><br>
+            </form>
+        </div>
+        <div class="container" id="buttons_div_update">
+            <button class="btn btn-primary" id="save">Save Changes</button>
+        </div>
+        <div id="test2"></div>
     </div>
     <script type="text/javascript" src="/js/admin.js""></script>
 </body>
