Add student page

--- a/views/student.html
+++ b/views/student.html
@@ -10,5 +10,11 @@
     <title>Student</title>
 </head>
 <body>
+    <div class="container_fluid container" id="quiz"></div></br>
+    <div class="container" id="buttons">
+        <button class="btn btn-success" onclick="verify()" id='submitButton'>Submit</button>
+        <button class="btn primary"onclick="location.href='/'" id="backButton">Back</button>
+        <script src="/js/student.js"></script> 
+    </div>
 </body>
 </html>
