Add back button for admin page

--- a/views/admin.html
+++ b/views/admin.html
@@ -48,7 +48,8 @@
             </form>
         </div>
         <div class="container" id="buttons_div_update">
-            <button class="btn btn-primary" id="save">Save Changes</button>
+            <button class="btn btn-primary" id="save">Save Changes</button> <br><br>
+            <button class="btn primary"onclick="location.href='/'" id="backButton">Back</button>
         </div>
         <div id="test2"></div>
     </div>
